<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.eclipse.mylyn.docs</groupId>
    <artifactId>wikitext.core</artifactId>
    <version>3.0.43-SNAPSHOT</version>
    <name>Mylyn Docs: WikiText: Core</name>
    <description>
        Mylyn WikiText provides an extensible framework and tools for parsing, editing and presenting lightweight markup. WikiText has parsers for AsciiDoc, CommonMark, Markdown, MediaWiki, Textile, Confluence, Creole, HTML, TracWiki and TWiki markup, and
        can be extended to support other languages. WikiText provides Ant tasks for converting lightweight markup to HTML, Eclipse Help, DocBook, DITA and XSL-FO. WikiText also provides an editor for editing such markup within Eclipse, and integrates with
        the Mylyn task editor causing it to be markup-aware. WikiText provides API for integrating wiki markup capabilities into Eclipse, RCP, stand-alone and server-side applications.
    </description>
    <url>https://projects.eclipse.org/projects/mylyn.docs</url>
    <packaging>pom</packaging>

    <profiles>
        <profile>
            <id>ossrh</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                	<gpgArguments>
                                		<arg>--pinentry-mode</arg>
                                		<arg>loopback</arg>
                                	</gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sign</id>
            <properties>
                <artifacts.sign>true</artifacts.sign>
            </properties>
        </profile>
    </profiles>

    <properties>
    	<guava.osgi>30.1</guava.osgi>
    	<guava.osgi.upper>31.0</guava.osgi.upper>
        <guava.version>${guava.osgi}-jre</guava.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <scm.developerConnection>scm:https://git.eclipse.org/r/mylyn/org.eclipse.mylyn.docs.git</scm.developerConnection>
    </properties>

    <modules>
        <module>org.eclipse.mylyn.wikitext</module>
        <module>org.eclipse.mylyn.wikitext.toolkit</module>
        <module>org.eclipse.mylyn.wikitext.tests</module>
        <module>org.eclipse.mylyn.wikitext.textile</module>
        <module>org.eclipse.mylyn.wikitext.html</module>
        <module>org.eclipse.mylyn.wikitext.ant</module>
        <module>org.eclipse.mylyn.wikitext.maven</module>

        <module>org.eclipse.mylyn.wikitext.asciidoc</module>
        <module>org.eclipse.mylyn.wikitext.commonmark</module>
        <module>org.eclipse.mylyn.wikitext.confluence</module>
        <module>org.eclipse.mylyn.wikitext.creole</module>
        <module>org.eclipse.mylyn.wikitext.markdown</module>
        <module>org.eclipse.mylyn.wikitext.mediawiki</module>
        <module>org.eclipse.mylyn.wikitext.mediawiki.ant</module>
        <module>org.eclipse.mylyn.wikitext.tracwiki</module>
        <module>org.eclipse.mylyn.wikitext.twiki</module>

        <module>repository</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.4</version>
                <extensions>true</extensions>
                <configuration>
                    <manifestLocation>META-INF</manifestLocation>
                    <instructions>
                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                        <Bundle-RequiredExecutionEnvironment>JavaSE-11</Bundle-RequiredExecutionEnvironment>
                        <Export-Package>${project.artifactId}.internal*;x-internal:=true,${project.artifactId}*</Export-Package>
                        <Import-Package>com.google.common*; version="[${guava.osgi},${guava.osgi.upper})", *</Import-Package>
                    </instructions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <uniqueVersion>false</uniqueVersion>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>.</directory>
                <includes>
                    <include>about_files/*</include>
                    <include>icons/*.gif</include>
                    <include>schema/*</include>
                    <include>about.*</include>
                    <include>feature.gif</include>
                    <include>plugin.properties</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
    </build>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    
    <dependencyManagement>
    	<dependencies>
		    <dependency>
		        <groupId>junit</groupId>
		        <artifactId>junit</artifactId>
		        <version>4.13.2</version>
		        <scope>test</scope>
		    </dependency>
		    <dependency>
		        <groupId>org.mockito</groupId>
		        <artifactId>mockito-core</artifactId>
		        <version>4.4.0</version>
		        <scope>test</scope>
		    </dependency>
    	</dependencies>
    </dependencyManagement>

    <licenses>
        <license>
            <name>Eclipse Public License Version 2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>Eclipse Mylyn</name>
        <url>http://eclipse.org/mylyn</url>
    </organization>
    <issueManagement>
        <system>Bugzilla</system>
        <url>https://bugs.eclipse.org/</url>
    </issueManagement>
    <scm>
        <developerConnection>${scm.developerConnection}</developerConnection>
        <connection>scm:https://git.eclipse.org/r/mylyn/org.eclipse.mylyn.docs.git</connection>
        <url>https://git.eclipse.org/c/mylyn/org.eclipse.mylyn.docs.git</url>
        <tag>HEAD</tag>
    </scm>
    <developers>
        <developer>
            <url>https://projects.eclipse.org/projects/mylyn.docs/who</url>
        </developer>
    </developers>

</project>
